# KnoobInjector

./: CMakeLists.txt  WinAuth.pfx  winmm.def
include/: proxy.h
src/: dllmain.cpp  exports.asm
